examples/test/testpolicy11323.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11323
  namespace: namespace365
spec:
  podSelector:
    matchLabels:
      key49: value44
      key30: value18
      key33: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value38
          key48: value18
          key40: value38
